--- a/src/App.css
+++ b/src/App.css
@@ -1,70 +1,3 @@
-/* .App {
-  text-align: center;
-}
-
-nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  min-height: 10vh;
-  background: rgb(78, 83, 85);
-  color: white;
-}
-.nav-links {
-  width: 40%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  list-style: none;
-}
-
-.container {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.card-container {
-  width: 200px;
-  height: 300px;
-}
-.card {
-  width: 100%;
-  height: 100%;
-  transition: transform 1s ease-in-out;
-  transform-style: preserve-3d;
-}
-.card-container:hover .card {
-  transform: rotateY(180deg);
-}
-.card .figure {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  margin: 0;
-  border-radius: 5%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.card .front {
-  background-color: rgb(70, 70, 78);
-  color: white;
-  text-align: center;
-}
-.card .back {
-  background-color: rgb(226, 226, 4);
-  transform: rotateY(180deg);
-}
-.back button {
-  background: rgb(70, 70, 78);
-  color: white;
-  border: none;
-  padding: 10px;
-} */
-
 * {
   margin: 0;
   padding: 0;
@@ -198,7 +131,6 @@ h6 {
 .nav-links a:hover {
   color: var(--primaryColor);
 }
-
 .show-nav {
   height: 100px;
 }
@@ -339,7 +271,6 @@ h6 {
 }
 /*end of services */
 /* featured recipes */
-
 .featured-recipes {
   padding: 5rem 0;
 }
@@ -364,6 +295,93 @@ h6 {
   }
 }
 /* end pf featured recipes */
+/* Footer */
+.footer {
+  background: #af9a7d;
+  padding: 0.75rem 2rem;
+  position: relative;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+}
+.foot-header {
+  display: flex;
+  justify-content: space-around;
+}
+.foot-links {
+  list-style-type: none;
+}
+.foot-links a {
+  display: block;
+  text-decoration: none;
+  padding: 1rem;
+  color: var(--mainBlack);
+  transition: var(--mainTransition);
+  text-align: center;
+  font-size: 0.85rem;
+  letter-spacing: var(--mainSpacing);
+}
+.foot-links a:hover {
+  color: #cfcfcf;
+}
+.show-foot {
+  height: 100px;
+}
+.follow {
+  font-size: 2rem;
+  display: block;
+  text-align: center;
+  padding: 20px 0 0 0;
+}
+.follow a {
+  color: #fff;
+  margin: 20px;
+}
+.footer small {
+  font-size: 0.55rem;
+  letter-spacing: 0.5px;
+  text-align: center;
+  color: #544a3c;
+  display: block;
+  padding: 20px 0 0 0;
+  width: 100%;
+  margin: 0 auto;
+}
+#developer {
+  display: inline-block;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  color: #bbdb75;
+  padding: 15px 5px 5px 5px;
+}
+
+@media screen and (min-width: 768px) {
+  .foot-center {
+    max-width: 1170px;
+    margin: 0 auto;
+    display: block;
+  }
+  .foot-links {
+    height: auto;
+    display: flex;
+    justify-content: center;
+    width: auto;
+    padding: 0.5rem 0;
+  }
+  .foot-links a {
+    margin: 0 1rem;
+    padding: 0.5rem 0;
+  }
+  .footer small {
+    width: auto;
+  }
+  #developer {
+    width: auto;
+  }
+}
+/* end of footer */
 /* recipe */
 .recipe {
   box-shadow: var(--lightShadow);
@@ -479,7 +497,7 @@ h6 {
 }
 .ingredients {
   display: grid;
-  grid-template-columns: 20% 7% 7%;
+  grid-template-columns: 25% 10% 10%;
 }
 .recipe-extras h6 {
   text-transform: capitalize;
